# rustbourn_engines

./: README.md
client/: Cargo.toml
client/assets/sprites/parry/: circle4.xcf
client/assets/sprites/tiles/: colorpalette.txt
client/data/: metadata.toml
client/src/: block.rs  bots.rs  camera.rs  collision.rs  common.rs  db_connection.rs  edit_menu.rs  grid.rs  hook.rs  leaderboard.rs  main.rs  map.rs  minimap.rs  nametag.rs  obstacle.rs  opponent.rs  parry.rs  parse.rs  player.rs  player_attach.rs  server-main.rs  start_menu.rs  track_spawner.rs
client/src/main_menu/: components.rs  mod.rs
client/src/main_menu/systems/: interactions.rs  layout.rs
client/src/module_bindings/: bevy_transform_type.rs  block_table.rs  block_type.rs  bot_type.rs  bots_table.rs  damage_obstacle_reducer.rs  decrease_grid_load_reducer.rs  generate_leaderboard_reducer.rs  grid_type.rs  hook_type.rs  leaderboard_table.rs  leaderboard_type.rs  mod.rs  obstacle_table.rs  obstacle_type.rs  owner_type_type.rs  player_connected_reducer.rs  player_disconnected_reducer.rs  player_table.rs  player_type.rs  reset_bots_if_no_players_online_reducer.rs  set_hook_extending_reducer.rs  track_table.rs  track_type.rs  update_block_owner_reducer.rs  update_bot_position_reducer.rs  update_hook_movement_reducer.rs  update_hook_position_reducer.rs  update_hooks_reducer.rs  update_leaderboard_reducer.rs  update_owner_grid_reducer.rs  update_player_position_reducer.rs  update_tracks_system_reducer.rs  vec_3_space_type.rs  vec_3_type.rs
server/: Cargo.toml
server/.cargo/: config.toml
(+1 files in other folders)
