[package]
name = "client"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
spacetimedb-sdk = "1.0"
hex = "0.4"
bevy = {version = "0.15.3", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.15.0"
noisy_bevy = "0.8"
clap = { version = "4.0", features = ["derive"] }
